# syncsteward

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.docs/: syncsteward_architecture.db  syncsteward_dial_plan.db  syncsteward_tool_spec.db  workspace.db
apps/syncsteward-macos/: Package.swift
apps/syncsteward-macos/Bundle/: Info.plist  SyncSteward.icns
apps/syncsteward-macos/Sources/SyncStewardMac/: OverviewModels.swift  OverviewStore.swift  SyncStewardMacApp.swift
apps/syncsteward-macos/Tests/SyncStewardMacTests/: OverviewDecodeTests.swift
apps/syncsteward-macos/scripts/: generate-placeholder-icon.swift  install-app.sh
branding/: README.md  generate_brand_assets.py
crates/syncsteward-cli/: Cargo.toml
crates/syncsteward-cli/src/: main.rs
crates/syncsteward-core/: Cargo.toml
crates/syncsteward-core/src/: config.rs  inventory.rs  lib.rs  model.rs  probe.rs  state.rs
crates/syncsteward-mcp/: Cargo.toml
crates/syncsteward-mcp/src/: lib.rs
registry/crates/syncsteward/: Cargo.toml  LICENSE.txt  README.md
registry/crates/syncsteward/src/: lib.rs
registry/npm/syncsteward/: README.md  index.js  package.json
specs/: syncsteward-architecture.md  syncsteward-dial-plan.md  syncsteward-tool-spec.md
