[workspace]
members = [
    "crates/syncsteward-core",
    "crates/syncsteward-cli",
    "crates/syncsteward-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
rmcp = { version = "1.3.0", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
walkdir = "2.5.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
opt-level = 3
